:lipstick: fix collapse head size & height ptt nav

--- a/src/client/src/app/sections/ptt-navigation/ptt-navigation.section.scss
+++ b/src/client/src/app/sections/ptt-navigation/ptt-navigation.section.scss
@@ -17,7 +17,7 @@
   padding: 8px;
   box-sizing: border-box;
   overflow-y: auto;
-  height: calc(100vh - 181px);
+  height: calc(100vh - 147px);
 
   ul {
     list-style: none;
@@ -50,8 +50,8 @@
           display: flex;
           align-items: center;
           justify-content: center;
-          width: 24px;
-          height: 24px;
+          min-width: 24px;
+          min-height: 24px;
           border-radius: 99px;
           outline: none;
           border: none;
